--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -3,19 +3,30 @@
     padding: 0px;
 }
 
+
+
+.Fooddiv{
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
+    gap: 30px;
+
+}
+
 .cardDiv{
-    border: 1px solid red;
     height: 10rem;
     width: 40rem;
     display: flex;
     flex-direction: rows;
-    gap: 10px;
+    gap: 30px;
+    margin: 10px;
 }
 
 .cardImg{
     width: 15rem;
     height: 100%;
-    border: 1px solid coral; 
+    border: 2px solid #c6a064;
     object-fit: cover;
 }
 
@@ -24,6 +35,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    font-size: 20px;
 }
 
 .cardTop{
@@ -33,25 +45,27 @@
     padding-left: 2%;
     padding-right: 2%; 
     height: 2em;
+    font-size: 20px;
 }
 
 .cardName{
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .cardPrice{
-    font-size: 30px;
+    font-size: 25px;
+    color: #c6a064;
 }
 
 .cardLine{
-    height:5px;
+    height:2px;
     background-color: black;
 }
 
 .cardDescription{
     padding-left: 2%;
     padding-right: 2%;
-    
+    color: gray;
     font-size: 26px;
     align-item: center;
 }
